--- a/beery.cls
+++ b/beery.cls
@@ -4,7 +4,7 @@
 \NeedsTeXFormat{LaTeX2e}[2023-11-01]
 \ProvidesExplClass
   {beery}
-  {2024-11-25}
+  {2024-12-09}
   {}
   {}
 
@@ -20,6 +20,18 @@
 \RequirePackage [ shortcuts , allowbreakbefore ] { extdash }
 \RequirePackage { csquotes }
 \RequirePackage { lmodern }
+
+\RequirePackage { tcolorbox }
+\tcbuselibrary { breakable }
+\NewTColorBox { mydisplaycode } { }
+  {
+      size   = minimal
+    , left   = 2pt
+    , right  = 2pt
+    , top    = 2pt
+    , bottom = 2pt
+    , breakable
+  }
 
 % CUSTOM MACROS
 
